--- a/root-Journal.html
+++ b/root-Journal.html
@@ -13,6 +13,22 @@
         Yesterday, I downloaded 'The Sandbox' app and the developers tools associated with it. It seems promicing. Hopefully, I get on time to learn about content creation on a
         distributed network // web3 // metaverse environment. God know I need the extra cash.
       </p>
+      <p>root: 03-17-22 /n
+        Today, we had a employee association meeting, and the city manager spoke to us. Apparently, the city is having dificulty retaining employees /n
+        and some measures are beeing taken to mitigate the problem. Some of the strategies mentioned were the testing of pilot programs that allow remote work || work from home, /n
+        putting more $ on the employees pockets, etc. /n /n
+        Unfortunately, those measures are 'now focus'. I don't think upper management understand '22 work force. Specially, the youngers. You see, there are technollogy expectations /n
+        that need to be met. It's not only working from the couch, you know. The way we interact today, and how we expect to conduct official business is not like in 2010. The DNA /n
+        of our city is not addequate for what is comming. Where is the room for mobile technologies, web3 & decentralized finances, metaverse, VR. /n /n
+        It will take a humble spirit across the board, to understand the future is here and we have the following options: /n
+        <ul>
+          <li>We ignore the noise and let the unforgiving history to punch us in the face</li>
+          <li>Jump into the mess, and make sure we are properly represented</li>
+        </ul>
+        /n
+        Now is the time to ride this our way from begining to the next end. Whatever the outcome, early involvement give us the best option.
+      </p>
+      
         
   </body>
 </html>
