--- a/root-Journal.html
+++ b/root-Journal.html
@@ -28,7 +28,13 @@
         /n
         Now is the time to ride this our way from begining to the next end. Whatever the outcome, early involvement give us the best option.
       </p>
-      
+      <p>root: 03-18-22 /n
+        I'm so burnedout. Anyway, it just click. We humans have created all sort of problems due to the lack of understanding about our-true nature. You see, we decided to be arrogant /n
+        and reject the old teachings. For example, whe we look in the book of Genesis, we were created by God to function as servant. Because, we don't understand the meaning of service /n
+        we think it slave us. By not understanding the set{of expecific pattameterns} associated with the service per God's intention, we miss the opportunity of nuturing from the fruts /n
+        and products linked to love, mercy, compassion, empathy, humbelnes, and other virtudes. By trying to put ourself first, we just doomed our life. Tragically, we do this every day, /n
+        and contstantly over and over. Like a bad vicius cycle. I hope I can transfer this new enlightment into my projects.
+      </p>
         
   </body>
 </html>
