Infor about RISC-V - Spring 2022

--- a/root-Journal.html
+++ b/root-Journal.html
@@ -35,6 +35,15 @@
         and products linked to love, mercy, compassion, empathy, humbelnes, and other virtudes. By trying to put ourself first, we just doomed our life. Tragically, we do this every day, /n
         and contstantly over and over. Like a bad vicius cycle. I hope I can transfer this new enlightment into my projects.
       </p>
+    <p>root: 03-28-22 /n
+      I'm back from my spring break and started my day with a great news. Now, you can buy a SCB that use RISC-V and Linux. So, I started my reaserch and found out that the Linux Foundation
+      has a free basic/introduction course. Please, see the important links below:
+      <ul>
+        <li>https://github.com/riscv</li>
+        <li>https://riscv.org/</li>
+        <li>https://training.linuxfoundation.org/training/introduction-to-riscv-lfd110x/</li>
+      </ul>
+    </p>
         
   </body>
 </html>
