--- a/root-Journal.html
+++ b/root-Journal.html
@@ -44,6 +44,9 @@
         <li>https://training.linuxfoundation.org/training/introduction-to-riscv-lfd110x/</li>
       </ul>
     </p>
+    <p>root: 03-29-22 /n
+      I just discovered QEMU, an open source system emulator. https://www.qemu.org/
+    </p>
         
   </body>
 </html>
