VIM potential on the office environment - 03-31-22

--- a/root-Journal.html
+++ b/root-Journal.html
@@ -47,6 +47,12 @@
     <p>root: 03-29-22 /n
       I just discovered QEMU, an open source system emulator. https://www.qemu.org/
     </p>
-        
+    <p>root: 03-29-22 /n
+      Today is the first time I use VIM and VS Code, probably since I left for my Spring Break, and I must note that if you don't use it constantly you loose profisinecy. Specially at the
+      early learning stages. 
+      In the other hand, while using other applications, I can see how much potential VIM have. I disklike how much dependency the industry has put on looks. I should keep functionality as
+      a priority.
+      I'm thinking on working in two parallel project to target the same issue at the office. One with an embeded VIM at the core and the other from a browser perspective.
+    </p>
   </body>
 </html>
